# website-whales-79-20250502-337PM-test

./: .backup_key  .env.local  .eslintrc.js  .eslintrc.typescript.js  .replit  API-VALIDATION-CLEANUP-CHECKLIST.md  API-VALIDATION-README.md  API-VALIDATION-SUMMARY.md  API-VALIDATION-USER-GUIDE.md  LICENSE  PRIVACY.md  README-VALIDATION-TOOLS.md  README-security-optimizations.md  README-security-scan-queue.md  README-typescript-automation.md  README-typescript-error-management.md  README-typescript-integration.md  README-validation-framework.md  README.md  REPLIT-COMPATIBILITY.md  TypeScript-Error-Management-QuickStart.md  TypeScript-Error-Management-README.md  TypeScript-Error-Management-Report.md  TypeScript-Error-Management-Roadmap.md  about_page.html  advanced-ts-error-finder.ts  agent-deadlinks-report.json  analyze-ts-errors.sh  api-validation-test.html  app.py  apply-speed-mode-patch.sh  check-links.js  check-openai-config.ts  check-ts-error-tables.js  cookie.txt  cookies.txt  create-quiet-workflow.js  create-ts-error-tables-drizzle.js  create-ts-error-tables.js  db-migration.js  (+163 more)
.github/: dependabot.yml
.storybook/: main.ts
Dependencies/: dependencies
attached_assets/: Admin Music Upload Feature Implementation.md  Admin-Note-2025-04-29-09-40-pm (1).txt  Advanced Security Enhancement Plan 20250501.docx  Advanced Security Enhancement Plan 20250501.txt  Analytics_Dashboard_for_Google_Analytics_with_interactive_graphs.md  Blog_Page_Plan_Dale_the_Whale.txt  Cosmic Consciousness _ Documentation _ Lovable.txt  Failed TypeScript Error Fixer Utility.docx  (+157 more)
(+4874 files in other folders)
